Cambios en tipo de Listas(getFirst por get(0))/Me daba error al hacer el jar